--- a/icthm/package.json
+++ b/icthm/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
